detox not showing up...fixed li first child in nav

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -192,7 +192,7 @@ nav {
 }
 
 // remove home from menu
-#menu li:first-child {
+#menu li.blankHome {
 	display: none;
 }
 
